--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <header>
-<h1>"Vai ter uma imagem aqui"</h1>
-<ul> <li>escola</li>
+<img src="alurastart logo.png" alt="logo alurastart">
+    <ul> <li>escola</li>
     <li>estudante</li>
 </ul>
 </header>
