--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<img src="alurastart logo.png" alt="logo alurastart">
-    <ul> <li>escola</li>
-    <li>estudante</li>
+<header class="cabecalho">
+<img class="cabecalho-imagem">
+    <img src="alurastart logo.png" alt="logo alurastart">
+    <ul class="cabecalho-lista"> <li class="cabecalho-lista-item">escola</li>
+    <li class="cabecalho-lista-item">estudante</li>
 </ul>
 </header>
 </body>
