--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header class="cabecalho">
 <img class="cabecalho-imagem">
-    <img src="alurastart logo.png" alt="logo alurastart">
+    <img src="comunicacao.png" alt="Pessoas conversando">
     <ul class="cabecalho-lista"> <li class="cabecalho-lista-item">escola</li>
     <li class="cabecalho-lista-item">estudante</li>
 </ul>
