--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <li class="cabecalho-lista-item">estudante</li>
 </ul>
 </header>
+<section class="escola">
+    <div class="escola-div-conteudo">
+<h2 class="escola-titulo"> Sobre a escola</h2>
+    </div>
+
+</section>
 </body>
 </html>
