--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <section class="escola">
     <div class="escola-div-conteudo">
 <h2 class="escola-titulo"> Sobre a escola</h2>
+<p class="escola-texto-um"> </p>
+<p class="escola-texto-dois"> </p>
     </div>
 
 </section>
